<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="General">


        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/show_all_ads_key"
            android:title="@string/show_all_ads_title"
            android:summaryOn="@string/show_all_ads_summary_on"
            android:summaryOff="@string/show_all_ads_summary_off"/>

        <net.jayschwa.android.preference.SliderPreference
            android:key="range_distance"
            android:title="@string/slider_title"
            android:summary="@array/slider_summaries"
            android:defaultValue="@string/slider_default"
            android:dialogMessage="@string/slider_message" />


    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_about">

        <Preference android:selectable="false"
            android:summary="@string/summary_about"/>

        <Preference android:summary="@string/app_version"
            android:title="@string/title_version"/>

        <Preference
            android:key="@string/key_send_feedback"
            android:summary="@string/summary_support"
            android:title="@string/title_send_feedback"/>

        <Preference android:title="@string/privacy_policy">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_privacy"/>

        </Preference>
        <Preference android:title="@string/title_terms">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_terms"/>

        </Preference>



    </PreferenceCategory>

</PreferenceScreen>